# diffusion-models

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 00_pytorch_essentials.ipynb  01_video_ai_landscape_and_data_needs.ipynb  02.5_pytorch_and_data_exam.ipynb  02_video_data_pipeline.ipynb  03_data_dedup_and_quality.ipynb  04_recaptioning_and_data_mixing.ipynb  05_training_data_infrastructure.ipynb  06.5_quality_and_infra_exam.ipynb  06_system_design.ipynb  07_pytorch_drills.ipynb  08_diffusion_from_scratch.ipynb  09.5_diffusion_foundations_exam.ipynb  09_stable_diffusion_deepdive.ipynb  10_dit_and_flow_matching.ipynb  11_guidance_and_control.ipynb  12_stable_cascade.ipynb  13.5_architecture_and_video_exam.ipynb  13_video_generation.ipynb  14_inference_optimization.ipynb  15_eval_metrics.ipynb  16_autoregressive_video.ipynb  17.5_production_and_frontiers_exam.ipynb  17_realtime_distillation.ipynb  18_long_context.ipynb  19_multimodal_generation.ipynb  20_finetuning_adapters.ipynb  21.5_integration_exam.ipynb  21_distributed_training_infra.ipynb  22_video_gen_landscape.ipynb
notebooks/exams/: DATA_EXAM_ELITE.ipynb  DATA_EXAM_HARD.ipynb  EXAM_EASY.ipynb  EXAM_ELITE.ipynb  EXAM_HARD.ipynb  EXAM_MEDIUM.ipynb  MODELING_EXAM_EASY.ipynb  MODELING_EXAM_HARD.ipynb  MODELING_EXAM_MEDIUM.ipynb
notebooks/exams/archive/: DATA_EXAM_EASY.ipynb  DATA_EXAM_MEDIUM.ipynb  MODELING_EXAM_ELITE.ipynb
